--- a/aboutus.html
+++ b/aboutus.html
@@ -34,9 +34,49 @@
             </div>
         </header>
 
+        <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
+            <div class="container">
+                <button
+                    class="navbar-toggler ml-auto"
+                    type="button"
+                    data-toggle="collapse"
+                    data-target="#nucampNavbar"
+                >
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse">
+                    <ul class="navbar-nav" id="nucampNavbar">
+                        <li class="nav-item active">
+                            <a href="index.html" class="nav-link"
+                                ><i class="fa fa-home fa-lg"> </i>Home</a
+                            >
+                        </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link"
+                                ><i class="fa fa-info fa-lg"> </i>About</a
+                            >
+                        </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link"
+                                ><i class="fa fa-list fa-lg"></i>Sites</a
+                            >
+                        </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
         <div class="container">
             <div class="row">
                 <div class="col">
+                    <ol class="breadcrumb">
+                        <li class="breadcrumb-item">
+                            <a href="index.html">Home</a>
+                        </li>
+                        <li class="breadcrumb-item active">About Us</li>
+                    </ol>
                     <h2>About Us</h2>
                     <hr />
                 </div>
@@ -104,27 +144,10 @@
                     <div class="col-4 col-sm-2 offset-1">
                         <h5>Links</h5>
                         <ul class="list-unstyled">
-                            <li class="nav-item">
-                                <a class="nav-link" href="index.html"
-                                    ><i class="fa fa-home fa-lg"></i> Home</a
-                                >
-                            </li>
-                            <li class="nav-item active">
-                                <a class="nav-link" href="#"
-                                    ><i class="fa fa-info fa-lg"></i> About</a
-                                >
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#"
-                                    ><i class="fa fa-list fa-lg"></i> Sites</a
-                                >
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#"
-                                    ><i class="fa fa-address-card fa-lg"></i>
-                                    Contact</a
-                                >
-                            </li>
+                            <li><a href="#">Home</a></li>
+                            <li><a href="aboutus.html">About</a></li>
+                            <li><a href="#">Sites</a></li>
+                            <li><a href="#">Contact</a></li>
                         </ul>
                     </div>
                     <div class="col-6 col-sm-5 text-center">
