--- a/index.html
+++ b/index.html
@@ -34,6 +34,42 @@
                 </div>
             </div>
         </header>
+        <!-- navbar -->
+        <!-- Todo add Navbar with updated FA links -->
+        <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
+            <div class="container">
+                <button
+                    class="navbar-toggler ml-auto"
+                    type="button"
+                    data-toggle="collapse"
+                    data-target="#nucampNavbar"
+                >
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse">
+                    <ul class="navbar-nav" id="nucampNavbar">
+                        <li class="nav-item active">
+                            <a href="#" class="nav-link"
+                                ><i class="fa fa-home fa-lg"> </i>Home</a
+                            >
+                        </li>
+                        <li class="nav-item">
+                            <a href="aboutus.html" class="nav-link"
+                                ><i class="fa fa-info fa-lg"> </i>About</a
+                            >
+                        </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link"
+                                ><i class="fa fa-list fa-lg"></i>Sites</a
+                            >
+                        </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
         <!-- Main Content -->
         <div class="container">
             <div class="row row-content align-items-center">
@@ -81,29 +117,13 @@
             <div class="container">
                 <div class="row">
                     <div class="col-4 col-sm-2 col-4 col-sm-2 offset-1">
+                        <!-- Todo: Remove FA icons -->
                         <h5>Links</h5>
                         <ul class="list-unstyled">
-                            <li class="nav-item active">
-                                <a class="nav-link" href="#"
-                                    ><i class="fa fa-home fa-lg"></i> Home</a
-                                >
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="aboutus.html"
-                                    ><i class="fa fa-info fa-lg"></i> About</a
-                                >
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#"
-                                    ><i class="fa fa-list fa-lg"></i> Sites</a
-                                >
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#"
-                                    ><i class="fa fa-address-card fa-lg"></i>
-                                    Contact</a
-                                >
-                            </li>
+                            <li><a href="#">Home</a></li>
+                            <li><a href="aboutus.html">About</a></li>
+                            <li><a href="#">Sites</a></li>
+                            <li><a href="#">Contact</a></li>
                         </ul>
                     </div>
                     <div class="col-6 col-sm-5 text-center">
