--- a/aboutus.html
+++ b/aboutus.html
@@ -14,6 +14,12 @@
             rel="stylesheet"
             href="node_modules/font-awesome/css/font-awesome.min.css"
         />
+
+        <link
+            rel="stylesheet"
+            href="node_modules/bootstrap-social/bootstrap-social.css"
+        />
+
         <link
             rel="stylesheet"
             href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans"
@@ -47,22 +53,25 @@
                 <div class="collapse navbar-collapse">
                     <ul class="navbar-nav" id="nucampNavbar">
                         <li class="nav-item active">
-                            <a href="index.html" class="nav-link"
-                                ><i class="fa fa-home fa-lg"> </i>Home</a
+                            <a class="nav-link" href="#"
+                                ><i class="fa fa-home fa-lg"></i> Home</a
                             >
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link"
-                                ><i class="fa fa-info fa-lg"> </i>About</a
+                            <a class="nav-link" href="aboutus.html"
+                                ><i class="fa fa-info fa-lg"></i> About</a
                             >
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link"
-                                ><i class="fa fa-list fa-lg"></i>Sites</a
+                            <a class="nav-link" href="#"
+                                ><i class="fa fa-list fa-lg"></i> Sites</a
                             >
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">Contact</a>
+                            <a class="nav-link" href="contactus.html"
+                                ><i class="fa fa-address-card fa-lg"></i>
+                                Contact</a
+                            >
                         </li>
                     </ul>
                 </div>
@@ -144,10 +153,10 @@
                     <div class="col-4 col-sm-2 offset-1">
                         <h5>Links</h5>
                         <ul class="list-unstyled">
-                            <li><a href="#">Home</a></li>
+                            <li><a href="index.html">Home</a></li>
                             <li><a href="aboutus.html">About</a></li>
                             <li><a href="#">Sites</a></li>
-                            <li><a href="#">Contact</a></li>
+                            <li><a href="contactus.html">Contact</a></li>
                         </ul>
                     </div>
                     <div class="col-6 col-sm-5 text-center">
