--- a/aboutus.html
+++ b/aboutus.html
@@ -52,13 +52,13 @@
                 </button>
                 <div class="collapse navbar-collapse">
                     <ul class="navbar-nav" id="nucampNavbar">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#"
+                        <li class="nav-item">
+                            <a class="nav-link" href="index.html"
                                 ><i class="fa fa-home fa-lg"></i> Home</a
                             >
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="aboutus.html"
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#"
                                 ><i class="fa fa-info fa-lg"></i> About</a
                             >
                         </li>
@@ -161,24 +161,42 @@
                     </div>
                     <div class="col-6 col-sm-5 text-center">
                         <h5>Social</h5>
-                        <a href="http://instagram.com/"
+                        <a
+                            class="btn btn-social-icon btn-instagram"
+                            href="http://instagram.com/"
                             ><i class="fa fa-instagram"></i
                         ></a>
-                        <a href="http://facebook.com/"
+                        <a
+                            class="btn btn-social-icon btn-facebook"
+                            href="http://facebook.com/"
                             ><i class="fa fa-facebook"></i
                         ></a>
-                        <a href="http://twitter.com/"
+                        <a
+                            class="btn btn-social-icon btn-twitter"
+                            href="http://twitter.com/"
                             ><i class="fa fa-twitter"></i
                         ></a>
-                        <a href="http://youtube.com/"
+                        <a
+                            class="btn btn-social-icon btn-google"
+                            href="http://youtube.com/"
                             ><i class="fa fa-youtube"></i
                         ></a>
+                        . . .
                     </div>
                     <div class="col-sm-4 text-center">
-                        <i class="fa fa-phone fa-lg text-primary"></i>
-                        1-206-555-1234<br />
-                        <i class="fa fa-envelope fa-lg text-primary"></i>
-                        campsites@nucamp.co
+                        <a
+                            role="button"
+                            class="btn btn-link"
+                            href="tel:+12065551234"
+                            ><i class="fa fa-phone"></i> 1-206-555-1234</a
+                        ><br />
+                        <a
+                            role="button"
+                            class="btn btn-link"
+                            href="mailto:campsites@nucamp.co"
+                            ><i class="fa fa-envelope-o"></i>
+                            campsites@nucamp.co</a
+                        >
                     </div>
                 </div>
             </div>
