--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
             </div>
         </header>
         <!-- navbar -->
-        <!-- Todo add Navbar with updated FA links -->
         <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
             <div class="container">
                 <button
@@ -68,7 +67,7 @@
                             >
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#"
+                            <a class="nav-link" href="contactus.html"
                                 ><i class="fa fa-address-card fa-lg"></i>
                                 Contact</a
                             >
@@ -124,7 +123,6 @@
             <div class="container">
                 <div class="row">
                     <div class="col-4 col-sm-2 col-4 col-sm-2 offset-1">
-                        <!-- Todo: Remove FA icons -->
                         <h5>Links</h5>
                         <ul class="list-unstyled">
                             <li><a href="#">Home</a></li>
