--- a/contactus.html
+++ b/contactus.html
@@ -127,7 +127,141 @@
                     <h2>Send us your Feedback</h2>
                     <hr />
                 </div>
-                <div class="col-md-10">Form goes here</div>
+                <div class="col-md-10">
+                    <form>
+                        <div class="form-group row">
+                            <label
+                                for="firstName"
+                                class="col-md-2 col-form-label"
+                            >
+                                First Name
+                            </label>
+                            <div class="col-md-10">
+                                <input
+                                    class="form-control"
+                                    id="firstName"
+                                    type="text"
+                                    name="firstName"
+                                    placeholder="First Name"
+                                />
+                            </div>
+                        </div>
+
+                        <div class="form-group row">
+                            <label
+                                for="lastName"
+                                class="col-md-2 col-form-label"
+                            >
+                                Last Name
+                            </label>
+                            <div class="col-md-10">
+                                <input
+                                    id="lastName"
+                                    class="form-control"
+                                    type="text"
+                                    name="lastName"
+                                    placeholder="Last Name"
+                                />
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label
+                                for="areaCode"
+                                class="col-md-2 col-form-label"
+                            >
+                                Contact Tel.
+                            </label>
+                            <div class="col-5 col-md-3">
+                                <input
+                                    id="areaCode"
+                                    class="form-control"
+                                    type="text"
+                                    name="areaCode"
+                                    placeholder="Area Code"
+                                />
+                            </div>
+                            <div class="col-7">
+                                <input
+                                    class="form-control"
+                                    type="text"
+                                    name="telNum"
+                                    placeholder="Tel. number"
+                                />
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label for="email" class="col-md-2 col-form-label">
+                                Email
+                            </label>
+                            <div class="col-md-10">
+                                <input
+                                    id="email"
+                                    class="form-control"
+                                    type="text"
+                                    name="email"
+                                    placeholder="Email"
+                                />
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <div class="col offset-md-2">
+                                May we contact you?
+                                <div class="form-check form-check-inline">
+                                    <input
+                                        id="contactYes"
+                                        class="form-check-input"
+                                        type="radio"
+                                        name="contactRadios"
+                                        value="yes"
+                                    />
+                                    <label
+                                        for="contactYes"
+                                        class="form-check-label"
+                                    >
+                                        Yes
+                                    </label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input
+                                        id="contactNo"
+                                        class="form-check-input"
+                                        type="radio"
+                                        name="contactRadios"
+                                        value="no"
+                                    />
+                                    <label
+                                        for="contactNo"
+                                        class="form-check-label"
+                                    >
+                                        No
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label
+                                for="feedback"
+                                class="col-md-2 col-form-label"
+                            >
+                                Your Feedback
+                            </label>
+                            <div class="col-md-10">
+                                <textarea
+                                    class="form-control"
+                                    name="feedback"
+                                    rows="8"
+                                ></textarea>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <div class="offset-md-2 col-md-10">
+                                <button class="btn btn-primary" type="submit">
+                                    Send Feedback
+                                </button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
 
