Workshop task 1 completed

--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
                 </div>
             </div>
         </nav>
+
         <!-- Main Content -->
         <div class="container">
             <div class="row row-content align-items-center">
@@ -112,12 +113,21 @@
                     <h2>Featured Campsites</h2>
                 </div>
                 <div class="col">
-                    <h3>React Lake Campground</h3>
-                    <p class="d-none d-sm-block">
-                        Nestled in the foothills of the Chrome Mountains, this
-                        campground on the shores of the pristine React Lake is a
-                        favorite for fly fishers.
-                    </p>
+                    <div class="media">
+                        <div class="media-body align-self-center"">
+                        <h3>React Lake Campground</h3>
+                        <p class="d-none d-sm-block">
+                            Nestled in the foothills of the Chrome Mountains,
+                            this campground on the shores of the pristine React
+                            Lake is a favorite for fly fishers.
+                        </p>
+                    </div>
+
+                    <img
+                        class="d-flex ml-3 img-thumbnail"
+                        src="img/react-lake-thumb.jpg"
+                        alt=""
+                    />
                 </div>
             </div>
 
@@ -143,6 +153,7 @@
                 </div>
             </div>
         </div>
+
         <!-- Footer Content -->
         <footer>
             <div class="container">
