--- a/index.html
+++ b/index.html
@@ -39,7 +39,11 @@
                         <h2>a better way to camp</h2>
                     </div>
                     <div class="col-md-4 col-xl-2 m-t-4">
-                        <a class="btn btn-info btn-lg text-nowrap" href="#reserveForm">Reserve Campsite</a>
+                        <a
+                            class="btn btn-info btn-lg text-nowrap"
+                            href="#reserveForm"
+                            >Reserve Campsite</a
+                        >
                     </div>
                 </div>
             </div>
@@ -220,7 +224,7 @@
         </div>
 
         <!-- Footer Content -->
-        <footer>
+        <footer class="site-footer">
             <div class="container">
                 <div class="row">
                     <div class="col-4 col-sm-2 col-4 col-sm-2 offset-1">
