--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                         <img
                             class="d-flex ml-3 img-thumbnail"
                             src="img/react-lake-thumb.jpg"
-                            alt=""
+                            alt="react-lake"
                         />
                     </div>
                 </div>
