--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
                     <div class="col-md-4 col-xl-2 m-t-4">
                         <a
                             class="btn btn-info btn-lg text-nowrap"
+                            data-toggle="tooltip"
+                            data-placement="bottom"
+                            data-html="true"
+                            title="Or call us at <br /><strong>1-206-555-1234</strong>"
                             href="#reserveForm"
                             >Reserve Campsite</a
                         >
@@ -281,5 +285,11 @@
         <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
         <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
         <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+
+        <script>
+            $(function () {
+                $('[data-toggle="tooltip"]').tooltip();
+            });
+        </script>
     </body>
 </html>
