--- a/index.html
+++ b/index.html
@@ -97,6 +97,54 @@
 
         <!-- Main Content -->
         <div class="container">
+            <div class="row row-content">
+                <div class="col-md-8 mx-auto">
+                    <div id="homeCarousel" class="carousel slide" data-ride="carousel">
+                        <!-- Carousel long bars -->
+                        <ol class="carousel-indicators">
+                            <li data-target="#homeCarousel" data-slide-to="0" class="active"></li>
+                            <li data-target="#homeCarousel" data-slide-to="1"></li>
+                            <li data-target="#homeCarousel" data-slide-to="2"></li>
+                        </ol>
+                        <!-- Innards of Carousel -->
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="/img/breadcrumb-trail.jpg" alt="Breadcrumb Trail Campground" class="d-block w-100">
+                                <div class="carousel-caption">
+                                    <h3>Breadcrumb Trail Campground</h3>
+                                    <p class="d-none d-sm-block">Let Nucamp Be your guide to this off-the-beaten-path, hike-in-only campground.</p>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img src="/img/react-lake.jpg" alt="React Lack Campground" class="d-block w-100">
+                                <div class="carousel-caption">
+                                    <h3>React Lake Campground</h3>
+                                    <p class="d-none d-sm-block">Nestled in the foothills of the Chrome Mountains, This campground on the shores of the pristine React Lake is a fovorite for fly fishers.</p>
+                                </div>
+                            </div>
+
+                            <div class="carousel-item">
+                                <img src="/img/chrome-river.jpg" alt="Chrome River Campground" class="d-block w-100">
+                                <div class="carousel-caption">
+                                    <h3>Chrome River</h3>
+                                    <p class="d-none d-sm-block">Spend a few sunny days and starry nights beneath a canopy of old-grown firs at this enchating spot by the Chrome River.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Previous Carousel Button -->
+                        <a href="#homeCarousel" class="carousel-control-prev" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <!-- Next Carousel Button -->
+                        <a href="#homeCarousel" class="carousel-control-next" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
+
+                    </div>
+                </div>
+            </div>
             <div class="row row-content align-items-center">
                 <div class="col-sm-4 order-sm-last col-md-3">
                     <h2 class="text-sm-right">Discover & Review</h2>
