--- a/index.html
+++ b/index.html
@@ -49,7 +49,78 @@
                 </div>
             </div>
         </header>
-        <!-- navbar -->
+        <!-- Reserve Campsite Modal -->
+        <div id="reserveModal" class="modal fade" role="dialog">
+            <div class="modal-dialog modal-lg" role="document">
+                <div class="modal-content">
+                    <div class="modal-header bg-info text-white">
+                        <h3 class="modal-title">Resevere a Campsite</h3>
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="container-fluid">
+                            <form>
+                                <div class="row form-group">
+                                    <label class="col-sm-6" for=""
+                                        >Number of Campers</label
+                                    >
+                                    <div class="col">
+                                        <select
+                                            name="numCampers"
+                                            id="numCampers"
+                                            class="form-control"
+                                        >
+                                            <option selected>Select...</option>
+                                            <option value="1">1</option>
+                                            <option value="2">2</option>
+                                            <option value="3">3</option>
+                                            <option value="4">4</option>
+                                            <option value="5">5</option>
+                                            <option value="6">6</option>
+                                        </select>
+                                    </div>
+                                </div>
+                                <!-- Date -->
+                                <div class="row form-group">
+                                    <label class="col-sm-6" for="date"
+                                        >Date</label
+                                    >
+                                    <div class="col">
+                                        <input
+                                            type="date"
+                                            id="date"
+                                            class="form-control"
+                                            name="date"
+                                            placeholder="mm/dd/yyyy"
+                                        />
+                                    </div>
+                                </div>
+
+                                <div class="row form-group ">
+                                    <label for="campsiteType" class="col-sm-6 col-form-label">Campsite Type</label>
+                                    <div class="col-2 btn-group btn-group-toggle" data-toggle="buttons">
+                                        <label class="btn btn-success active">
+                                        <input class="" type="radio" name="options" id="option1"> Tent
+                                    </label>
+                                    <label class="btn btn-primary">
+                                      <input type="radio" name="options" id="option2"> RV
+                                    </label>
+                                    </div>
+                                </div>
+
+                                <div class="form-row">
+                                    <button type="button" class="btn btn-secondary " data-dismiss="modal">Cancel</button>
+                                    <button type="submit" class="btn btn-primary ml-1">Search</button>
+                                </div>
+
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Navbar -->
         <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
             <div class="container">
                 <a class="navbar-brand" href="#"
@@ -96,6 +167,7 @@
                 </div>
             </div>
         </nav>
+        
         <!-- Login Modal -->
         <div id="loginModal" class="modal fade" role="dialog">
             <div class="modal-dialog" role="document">
