--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
         <!-- Required meta tags always come first -->
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width" initial-scale="1" />
-        <!-- Boostrap CSS -->
+        <!-- build:css css/main.css -->
         <link
             rel="stylesheet"
             href="node_modules/bootstrap/dist/css/bootstrap.min.css"
         />
-        <!-- Custom styles *IMPORTANT TO LINK AFTER BOOTSTRAP* -->
         <link
             rel="stylesheet"
             href="node_modules/font-awesome/css/font-awesome.min.css"
@@ -18,12 +17,12 @@
             rel="stylesheet"
             href="node_modules/bootstrap-social/bootstrap-social.css"
         />
-
+        <link rel="stylesheet" href="css/styles.css" />
+        <!-- endbuild -->
         <link
             rel="stylesheet"
             href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans"
         />
-        <link rel="stylesheet" href="css/styles.css" />
         <title>NuCamp: A Better Way To Camp</title>
     </head>
     <body>
@@ -649,11 +648,11 @@
                 </div>
             </div>
         </footer>
-        <!-- jQuery must come first, then Popper.js, then the Bootstrap JavaScript plugins -->
+        <!-- build:js js/main.js -->
         <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
         <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
         <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-
         <script src="js/scripts.js"></script>
+        <!-- endbuild -->
     </body>
 </html>
